doc: Swagger user
