# internal/handlers/user_handler.go
@@ -20,6 +20,20 @@ func NewUserHandler(userService *services.UserService) *UserHandler {
 	return &UserHandler{UserService: userService}
 }
 
+// Get users by params godoc
+// @Summary Fetch users by Params
+// @Description Fetch users by Params
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param limit query int false "Number of users to return (default 15)"
+// @Param offset query int false "Offset for pagination (default 0)"
+// @Param name query string false "Filter by name"
+// @Param type query int false "Filter by email"
+// @Param email query string false "Filter by email"
+// @Param status query int false "Filter by email"
+// @Success 200 {object} models.JSONReponseMany
+// @Router /user [get]
 func (h *UserHandler) GetUsersByParams(c *fiber.Ctx) error {
 	// Call the service to get user details
 	var params models.QueryParams
@@ -51,12 +65,26 @@ func (h *UserHandler) GetUsersByParams(c *fiber.Ctx) error {
 
 	count, _ := h.UserService.GetTotalUsers(c.Context())
 
-	response := make(map[string]interface{}, 0)
-	response["count"] = count
-	response["users"] = users
-	return util.SuccessReponse(c, response)
+	response := models.JSONReponseMany{
+		Success: true,
+		Count:   count,
+		Limit:   limit,
+		Offset:  offset,
+		Data:    users,
+	}
+
+	return c.Status(fiber.StatusOK).JSON(response)
 }
 
+// Get user by ID godoc
+// @Summary Get user by ID
+// @Description Get user by ID
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param id path int true "User ID"
+// @Success 200 {object} models.JSONReponseOne
+// @Router /user/{id} [get]
 func (h *UserHandler) GetUserByID(c *fiber.Ctx) error {
 	// Call the service to get user by id
 	userID, err := strconv.Atoi(c.Params("id"))
@@ -72,15 +100,27 @@ func (h *UserHandler) GetUserByID(c *fiber.Ctx) error {
 	}
 
 	// Return user as JSON
-	response := make(map[string]interface{}, 0)
-	response["user"] = user
-	return util.SuccessReponse(c, response)
+	response := models.JSONReponseOne{
+		Success: true,
+		Data:    user,
+	}
+
+	return c.Status(fiber.StatusOK).JSON(response)
 }
 
 type UserEmailIsAvailableRequest struct {
 	Email string `json:"email"`
 }
 
+// Check if email is available godoc
+// @Summary Check if email is available
+// @Description Check if email is available
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param body body UserEmailIsAvailableRequest true "Email body request"
+// @Success 200 {object} models.JSONReponseOne
+// @Router /user/email/is-available [post]
 func (h *UserHandler) UserEmailIsAvailable(c *fiber.Ctx) error {
 	var request UserEmailIsAvailableRequest
 	var validationErrors = validators.ValidationErrors{}
@@ -110,9 +150,23 @@ func (h *UserHandler) UserEmailIsAvailable(c *fiber.Ctx) error {
 		return util.ErrorReponse(c, fiber.StatusBadRequest, nil, validationErrors)
 	}
 
-	return util.SuccessReponse(c, response)
+	resp := models.JSONReponseOne{
+		Success: true,
+		Data:    response,
+	}
+
+	return c.Status(fiber.StatusOK).JSON(resp)
 }
 
+// Create a user godoc
+// @Summary Create a user
+// @Description Create a user
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param body body services.UserCreateInput true "User body request"
+// @Success 200 {object} models.JSONReponseOne
+// @Router /user [post]
 func (h *UserHandler) CreateUser(c *fiber.Ctx) error {
 	var input services.UserCreateInput
 	var validationErrors = validators.ValidationErrors{}
@@ -148,17 +202,29 @@ func (h *UserHandler) CreateUser(c *fiber.Ctx) error {
 		return util.ErrorReponse(c, fiber.StatusBadRequest, nil, validationErrors)
 	}
 
-	response := make(map[string]interface{})
-	response["user"] = user
+	response := models.JSONReponseOne{
+		Success: true,
+		Data:    user,
+	}
 
 	// Return user as JSON
-	return util.SuccessReponse(c, response)
+	return c.Status(fiber.StatusOK).JSON(response)
 }
 
 type UpdateUserRequest struct {
 	User models.User `json:"user"`
 }
 
+// Update a user godoc
+// @Summary Update a user
+// @Description Update a user
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param id path int true "User ID"
+// @Param body body services.UserUpdateInput true "User body request"
+// @Success 200 {object} models.JSONReponseOne
+// @Router /user/{id} [put]
 func (h *UserHandler) UpdateUser(c *fiber.Ctx) error {
 	var input services.UserUpdateInput
 	var validationErrors = validators.ValidationErrors{}
@@ -192,13 +258,24 @@ func (h *UserHandler) UpdateUser(c *fiber.Ctx) error {
 		return util.ErrorReponse(c, fiber.StatusBadRequest, nil, validationErrors)
 	}
 
-	response := make(map[string]interface{})
-	response["user"] = userUpdated
+	response := models.JSONReponseOne{
+		Success: true,
+		Data:    userUpdated,
+	}
 
 	// Return user as JSON
-	return util.SuccessReponse(c, response)
+	return c.Status(fiber.StatusOK).JSON(response)
 }
 
+// Delete a user godoc
+// @Summary Delete a user
+// @Description Delete a user
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param id path int true "User ID"
+// @Success 200 {object} models.JSONReponseOne
+// @Router /user/{id} [delete]
 func (h *UserHandler) DeleteUser(c *fiber.Ctx) error {
 	userID, err := strconv.Atoi(c.Params("id", "0"))
 	var validationErrors = validators.ValidationErrors{}
@@ -222,9 +299,13 @@ func (h *UserHandler) DeleteUser(c *fiber.Ctx) error {
 		return util.ErrorReponse(c, fiber.StatusBadRequest, nil, validationErrors)
 	}
 
-	response := make(map[string]interface{})
-	response["msg"] = fmt.Sprintf("user %d deleted", userID)
+	msg := fmt.Sprintf("user %d deleted", userID)
+
+	response := models.JSONReponseOne{
+		Success: true,
+		Data:    msg,
+	}
 
 	// Return user as JSON
-	return util.SuccessReponse(c, response)
+	return c.Status(fiber.StatusOK).JSON(response)
 }
